<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/girl"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:textColorHint="#bfffffff"
        android:inputType="text"
        android:maxLength="16"
        android:textColor="#ffffffff"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textColorHint="#bfffffff"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="#ffffffff"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_register_confirmation_password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/confirmation_password"
        android:textColorHint="#bfffffff"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="#ffffffff"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#de4037"
        android:text="@string/register" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#de4037"
        android:text="@string/cancel" />

</LinearLayout>