<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffde4037"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/phone_number_login"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/phone_icon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_your_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/lock_icon"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_your_verification_code"
            android:inputType="number"
            android:maxLength="4"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/btn_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/get_verification_code"
            android:textColor="#ffde4037"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#ffffffff"
        android:background="@drawable/shape_button" />

</LinearLayout>