<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_account_and_register"
        android:textColor="#e62077ff"/>

    <Button
        android:id="@+id/btn_account_login"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:background="@drawable/shape_button"
        android:text="@string/account_login"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_mobile_login"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/shape_button"
        android:textSize="15sp"
        android:text="@string/mobile_login" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:hint="@string/username"
        android:textColorHint="#bfffffff"
        android:inputType="text"
        android:maxLength="16"
        android:textColor="#ffffffff"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-191dp"
        android:hint="@string/password"
        android:textColorHint="#bfffffff"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="#ffffffff"
        android:importantForAutofill="no" />

</RelativeLayout>